[gd_scene load_steps=9 format=3 uid="uid://bh31qvhyy6jq2"]

[ext_resource type="Texture2D" uid="uid://buy1up1jwubu6" path="res://assets/ui/points_background.png" id="1_3cv1o"]
[ext_resource type="Script" uid="uid://03db71asnu36" path="res://game_ui.gd" id="1_3rlp6"]
[ext_resource type="FontFile" uid="uid://bjbonoi056l65" path="res://assets/onciale-phf.regular.ttf" id="2_2ykv4"]
[ext_resource type="PackedScene" uid="uid://bt83pj7p86g8o" path="res://spawn_button_spearman.tscn" id="4_spearman"]
[ext_resource type="PackedScene" uid="uid://cxq0nfw8s1hcp" path="res://spawn_button_knight.tscn" id="5_knight"]
[ext_resource type="PackedScene" uid="uid://cqjn38bkl6w5v" path="res://spawn_button_archer.tscn" id="6_archer"]
[ext_resource type="PackedScene" uid="uid://dvb3jvgcwvwml" path="res://spawn_button_healer.tscn" id="7_healer"]
[ext_resource type="PackedScene" uid="uid://dfnc23r0v5kg3" path="res://spawn_button_cancel.tscn" id="8_cancel"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_3rlp6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Hbox" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Vbox_left" type="VBoxContainer" parent="Control/MarginContainer/Hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Points" type="Control" parent="Control/MarginContainer/Hbox/Vbox_left"]
custom_minimum_size = Vector2(339, 120)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/Hbox/Vbox_left/Points"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_3cv1o")

[node name="PointLabel" type="Label" parent="Control/MarginContainer/Hbox/Vbox_left/Points"]
layout_mode = 0
offset_left = 43.0
offset_top = 10.0
offset_right = 321.0
offset_bottom = 123.0
theme_override_fonts/font = ExtResource("2_2ykv4")
theme_override_font_sizes/font_size = 75
text = "1000 g"

[node name="icons" type="FlowContainer" parent="Control/MarginContainer/Hbox/Vbox_left"]
layout_mode = 2

[node name="spacer" type="Control" parent="Control/MarginContainer/Hbox/Vbox_left"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="Control/MarginContainer/Hbox/Vbox_left"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SpawnButtonSpearman" parent="Control/MarginContainer/Hbox/Vbox_left/ButtonContainer" instance=ExtResource("4_spearman")]
layout_mode = 2

[node name="SpawnButtonKnight" parent="Control/MarginContainer/Hbox/Vbox_left/ButtonContainer" instance=ExtResource("5_knight")]
layout_mode = 2

[node name="SpawnButtonArcher" parent="Control/MarginContainer/Hbox/Vbox_left/ButtonContainer" instance=ExtResource("6_archer")]
layout_mode = 2

[node name="SpawnButtonHealer" parent="Control/MarginContainer/Hbox/Vbox_left/ButtonContainer" instance=ExtResource("7_healer")]
layout_mode = 2

[node name="SpawnButtonCancel" parent="Control/MarginContainer/Hbox/Vbox_left/ButtonContainer" instance=ExtResource("8_cancel")]
layout_mode = 2

[node name="Vbox_right" type="VBoxContainer" parent="Control/MarginContainer/Hbox"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2

[node name="Wave_timer" type="Control" parent="Control/MarginContainer/Hbox/Vbox_right"]
custom_minimum_size = Vector2(339, 129)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/Hbox/Vbox_right/Wave_timer"]
layout_mode = 0
offset_left = 351.0
offset_top = 6.0
offset_right = 702.0
offset_bottom = 137.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_3cv1o")

[node name="Wave_timer_label" type="Label" parent="Control/MarginContainer/Hbox/Vbox_right/Wave_timer"]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 596.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("2_2ykv4")
theme_override_font_sizes/font_size = 75
text = "00:10"
horizontal_alignment = 2

[node name="spacer" type="Control" parent="Control/MarginContainer/Hbox/Vbox_right"]
layout_mode = 2
size_flags_vertical = 3

[node name="units" type="Control" parent="Control/MarginContainer/Hbox/Vbox_right"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/Hbox/Vbox_right/units"]
layout_mode = 0
offset_left = 177.0
offset_top = 61.0
offset_right = 635.0
offset_bottom = 282.0
texture = ExtResource("1_3cv1o")

[node name="Label" type="Label" parent="Control/MarginContainer/Hbox/Vbox_right/units"]
layout_mode = 0
offset_left = 62.0
offset_top = 79.0
offset_right = 581.0
offset_bottom = 436.0
theme_override_fonts/font = ExtResource("2_2ykv4")
theme_override_font_sizes/font_size = 35
text = "Spearman -> J
Knight -> K
Archer -> L
Remove -> Backspace
"
horizontal_alignment = 2
